--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,12 @@ a:visited {
 /* Einde kleuren voor de links */
 ul {
     list-style-type: none;
-    margin:0;
+    margin: -55px;
     padding: 0;
     background-color: #f1f1f1;
     margin-left: 0px;
-    max-width: 120px;
+    max-width: 105px;
+    
 
     
   }
@@ -41,9 +42,10 @@ ul {
   li a {
     display: block;
     color: #000;
-    padding: 8px 16px;
+    padding: 7px 16px;
     text-decoration: none;
     background-color: beige;
+    margin-left: -10px
   }
   li a:hover {
     background-color: #555;
