--- a/styles.css
+++ b/styles.css
@@ -20,37 +20,21 @@ body {
 p { 
     margin:auto;
     margin-top: 10px;}
+/* Links */
+    .navigation-links {
+        font-size: 20px
+    }
 
-/* Begin kleuren voor de links: */
-a:link {
-    color:black;}
-/* Einde kleuren voor de links */
-ul {
-    list-style-type: none;
-    padding: 0;
-    background-color: #f1f1f1;
-    max-width: 120px;
-    margin: -55px 0px 0px 10px;
-  
 
-    
+    /* Begin kleuren voor de links: */
+    a:link {
+    color:black;
+    text-decoration: none}
+    a:hover {
+    color:black}
+    a:visited {
+    color:black}
+    /* Einde kleuren voor de links */
+/* Einde Links */
 
-    
-  }
-  
-  li a {
-    display: block;
-    color: #000;
-    padding: 7px 16px;
-    text-decoration: none;
-    background-color: beige;
-    margin-left: 0px;
-  }
-  li a:hover {
-    background-color: #555;
-    color: rgb(255, 255, 255);
-  }
-  a {
-    
-    
-  }
+
