navigatie bar afgerond

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,9 @@
 
 /* Einde letters */
 body {
-    background-color: #f0f0f0}
+    background-color: #f0f0f0;
+    margin: 0}
+
 article {
     background-color:   
     margin: -10px}
@@ -30,7 +32,11 @@ p {
 nav {
     box-sizing: border-box;
     width: 100%;
-    background-color: #333}
+    background-color: #333;
+    padding: 0px 10px;
+    margin: 0;
+}
+
 
 .nav-content {
     display: flex;
