--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,21 @@
 
     h1 {
         margin: 20px auto auto auto;
-        font-size: 40px;
+        font-size: 50px;
         text-align: center}
 
+        /* Overbodig op het moment 
     h2 {
         font-size: 30px;
         margin: 0px 0px 0 10px}
+        */
     
-    p {
+    h3 {
         font-size: 20px;
-        margin: 10px 0 0 10px;
-    }
+        margin: 100px 0 0 100px;}
+    
+        .hobbies {
+            font-size: 15px;}
     
 
 
