--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,9 @@
 /* Basis styling */
     body {
         background-color: #f0f0f0;
-        margin: 0}
+        margin: 0;
+        min-height: 300px;
+        margin-bottom: 100px}
     table, td, th {
         border : 1px solid blue;
         border-collapse: collapse;}
@@ -38,10 +40,11 @@
         display: flex;
         justify-content:center;
         flex-direction: column;
-        width: 550px;
+        width: 590px;
         margin: 40px auto 0px auto;
-        font-size: 20px;
-        max-height: 500px}
+        font-size: 20px; 
+    
+    }
 
     .faq-questions {
         border: solid 1px #333;
@@ -64,7 +67,8 @@
     .nav-content {
         display: flex;
         justify-content: space-between; /* Space between items */
-        align-items: center;} /* Centers items vertically */
+        align-items: center;
+        } /* Centers items vertically */
 
 
     .navigation-bar {
@@ -94,7 +98,11 @@
 
     li a:hover {
         background-color: #555;
-        color:white;}   
+        color: white;} 
+    
+    .faq-links {
+        color: blue
+    }
 
 /* Begin kleuren voor de links: */
      a:link {
@@ -105,21 +113,21 @@
      
      
      /* Laat zien op welke pagina je zit */
-    #startpagina {
-        background-color: #555;
-        color: white;}
-    #profiel {
-        background-color: #555;
-        color: white}
-    #dashboard {
-        background-color: #555;
-        color: white}
-    #faq {
-        background-color: #555;
-        color: white}
-    #blog {
-        background-color: #555;
-        color: white}
+        #startpagina {
+            background-color: #555;
+            color: white;}
+        #profiel {
+            background-color: #555;
+            color: white}
+        #dashboard {
+            background-color: #555;
+            color: white}
+        #faq {
+            background-color: #555;
+            color: white}
+        #blog {
+            background-color: #555;
+            color: white}
         
 /* Einde kleuren voor de links */
 
