--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,14 +37,50 @@
         margin: 0;
         min-height: 300px;
         margin-bottom: 100px}
-
+                                                                 /* Table */
     table, td, th {
-        border : 1px solid blue;
-        border-collapse: collapse;}
-        
+        border : 1.5px solid blue;
+        border-collapse: collapse;
+    }
+          
     tr {
         text-align: center;}
     
+    .bezig {
+      background-color: yellow;
+    }
+
+    .niet-gestart {
+      background-color: lightgrey;
+    }
+    .color-index {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .color-box {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+      vertical-align: middle;
+      border: 0.5px solid black;
+      border-radius: 20%;
+    }
+    .niet-gestart {
+      background-color: lightgray;
+    }
+    .in-progress {
+      background-color: yellow;
+    }
+    .completed {
+      background-color: lightgreen;
+    }
+
+    #totaal-box {
+      border-top: 3px solid black;
+    }
+                                                                /* EINDE TABLE */
     .faq-container {
         display: flex;
         justify-content:center;
