--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,6 +37,8 @@
         margin: 0;
         min-height: 300px;
         margin-bottom: 100px}
+
+    
                                                                  /* Table */
     table, td, th {
         border : 1.5px solid blue;
@@ -53,10 +55,9 @@
     .niet-gestart {
       background-color: lightgrey;
     }
-    .color-index {
+    .color-container {
       display: flex;
       justify-content: center;
-      margin-top: 20px;
     }
     .color-box {
       display: inline-block;
@@ -83,25 +84,47 @@
 
     input[type="text"] {
       background-color: transparent;
-      border: 2px solid; /* Adjust the width as needed */
+      border: 2px solid; /* Adjust the width as needed */ 
+      width: 50px;
+      text-align: center;
+      font-size: 16px
       
+    }
+    .progress-bar-container {
+      width: 50%;
+      margin: auto;
+      background-color: darkgrey;
+      border-radius: 5px;
+      overflow: hidden;
+      margin-top: 10px;
+    }
+    .progress-bar {
+      height: 15px;
+      width: 0;
+      background-color: red;
+      transition: width 0.3s, background-color 0.5s;
     }
     
                                                                 /* EINDE TABLE */
     .faq-container {
         display: flex;
-        justify-content:center;
+        justify-content: center;
         flex-direction: column;
         width: 590px;
-        margin: 40px auto 0px auto;
-        font-size: 20px; 
-    
+        margin: auto;
+        font-size: 20px;    
     }
 
     .faq-questions {
-        border: solid 1px #333;
-        margin: 30px 0px 0px 0px;}
-        
+        padding: 10px;
+        border-radius: 10px; 
+        border: solid 2px #333;
+        margin: 30px 0 0 0;
+    }
+    .faq-text {
+      margin: 10px 10px 0 10px;
+    }
+
     .grid-container {
         display: grid;
         grid-template-columns: auto auto;}
