--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,14 +7,14 @@
         font-size: 50px;
         text-align: center}
 
-       
+    
+        
     h2 {
         font-size: 40px;
         margin: 0px 0px 0px 0px;
         text-align: center;}
-        
-    
-    h3 {
+                                                              /* StartPagina en Profiel */
+    #kopje-links {
         font-size: 30px;
         margin: 40px 0 0 280px;}
     
@@ -27,8 +27,7 @@
         margin: 10px}
 
     .profiel-text {
-        margin: 10px
-    }   
+        margin: 10px}   
                                                                 /* Einde letters stylign */
 
                                                                 /* Basis styling */
@@ -42,23 +41,26 @@
                                                                  /* Table */
     table, td, th {
         border : 1.5px solid blue;
-        border-collapse: collapse;
-    }
+        border-collapse: collapse;}
           
     tr {
         text-align: center;}
+
+    .schema {
+      width: 98%;
+      margin: 25px 0px 0px 10px;
+      border: solid 3px #333}
     
     .bezig {
-      background-color: yellow;
-    }
+      background-color: yellow;}
 
     .niet-gestart {
-      background-color: lightgrey;
-    }
-    .color-container {
+      background-color: lightgrey;}
+    
+      .color-container {
       display: flex;
-      justify-content: center;
-    }
+      justify-content: center;}
+
     .color-box {
       display: inline-block;
       width: 20px;
@@ -66,17 +68,16 @@
       margin-right: 10px;
       vertical-align: middle;
       border: 0.5px solid black;
-      border-radius: 20%;
-    }
+      border-radius: 20%;}
+
     .niet-gestart {
-      background-color: lightgray;
-    }
+      background-color: lightgray;}
+
     .in-progress {
-      background-color: yellow;
-    }
+      background-color: yellow;}
+
     .completed {
-      background-color: lightgreen;
-    }
+      background-color: lightgreen;}
 
     #totaal-box {
       border-top: 3px solid black;
@@ -87,24 +88,21 @@
       border: 2px solid; /* Adjust the width as needed */ 
       width: 50px;
       text-align: center;
-      font-size: 16px
+      font-size: 16px}
       
-    }
     .progress-bar-container {
       width: 50%;
       margin: auto;
       background-color: darkgrey;
       border-radius: 100px;
       overflow: hidden;
-      margin-top: 10px;
-    }
+      margin-top: 10px;}
+
     .progress-bar {
       height: 15px;
       width: 0;
       background-color: red;
-      transition: width 0.3s, background-color 0.5s;
-    }
-    
+      transition: width 0.3s, background-color 0.5s;}
                                                                 /* EINDE TABLE */
     .faq-container {
         display: flex;
@@ -112,18 +110,16 @@
         flex-direction: column;
         width: 590px;
         margin: auto;
-        font-size: 20px;    
-    }
+        font-size: 20px;}
 
     .faq-questions {
         padding: 10px;
         border-radius: 10px; 
         border: solid 2px #333;
-        margin: 30px 0 0 0;
-    }
+        margin: 30px 0 0 0;}
+
     .faq-text {
-      margin: 10px 10px 0 10px;
-    }
+      margin: 10px 10px 0 10px;}
 
     .grid-container {
         display: grid;
@@ -163,14 +159,12 @@
         font-size: 25px;
         border: solid 3px #333;
         padding: 10px 20px;
-        margin: 30px 10px;
-      }
+        margin: 30px 10px;}
 
     .blog-text-short {
+          font-size: 25px;
           margin: auto;
-          text-align: center
-    }
-  
+          text-align: center}
     
     .blog-foto-container {
         display: flex;
@@ -179,10 +173,7 @@
         align-items: center;
         gap: 16px;
         max-width: 2000px;
-        margin: 0 auto 0px 0px;
         padding: 20px 10px;}
-
-    
 
     .blog-foto {
         width: 100%;
@@ -192,13 +183,21 @@
         border-radius: 10px;
         margin: 10px 0px 0px 50px}
 
-    .schema {
-        width: 98%;
-        margin: 25px 0px 0px 10px;
-        border: solid 3px #333}
-
-
-
+    .swot-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 50px;}
+    
+    .swot-item {
+      flex: 1;
+      border-radius: 10px;
+    }
+    .swot-item h3 {
+      display: flex;
+      justify-content: center;
+      font-size: 35px;
+      margin-top: 0;}
                                                                 /* Einde basis styling */
     
                                                                 /* Navigation bar*/
@@ -212,9 +211,7 @@
     .nav-content {
         display: flex;
         justify-content: space-between; 
-        align-items: center;
-        } 
-
+        align-items: center;} 
 
     .navigation-bar {
         list-style-type: none;           
@@ -230,9 +227,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        flex-grow: 0;
-      }
-
+        flex-grow: 0;}
                                                                 /* Links */
     .navigation-links {
         font-size: 25px;
@@ -252,8 +247,7 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        transition: background-color 0.6s;
-    }
+        transition: background-color 0.6s;}
 
     img {
         height: 25px}
@@ -261,12 +255,10 @@
     li a:hover {
         background-color: #555;
         color: white;} 
-    
-  
                                                                 /* Begin kleuren voor de links: */
      a:link {
         color: white;
-        text-decoration: }
+        text-decoration:}
         
      .navigation bar a:hover {
         color: white;}
@@ -339,7 +331,7 @@
     
     .footer-links:hover {
         color: grey;
-        background-color: #333  }   
+        background-color: #333}   
                                                                 /* Einde Footer Styling */
 
 
