--- a/assets/styles.css
+++ b/assets/styles.css
@@ -85,7 +85,7 @@
 
     input[type="text"] {
       background-color: transparent;
-      border: 2px solid; /* Adjust the width as needed */ 
+      border: 2px solid;  
       width: 50px;
       text-align: center;
       font-size: 16px}
@@ -104,7 +104,8 @@
       background-color: red;
       transition: width 0.3s, background-color 0.5s;}
                                                                 /* EINDE TABLE */
-    .faq-container {
+                                                                /* FAQ */
+    .faq-container {  
         display: flex;
         justify-content: center;
         flex-direction: column;
@@ -120,7 +121,8 @@
 
     .faq-text {
       margin: 10px 10px 0 10px;}
-
+                                                                /* Einde FAQ */
+                                                                /* BLOG */
     .grid-container {
         display: grid;
         grid-template-columns: auto auto;
@@ -198,7 +200,23 @@
       justify-content: center;
       font-size: 35px;
       margin-top: 0;}
-                                                                /* Einde basis styling */
+
+    .ervaring{
+      width: 80%;
+      margin: 40px auto;
+      align-items: center;
+      text-align: center;}
+
+    .ervaring h3 {
+      font-size: 30px}
+
+    .blog-text-ervaring {
+      font-size: 25px;
+      border: solid 3px #333;
+      padding: 10px 20px;
+      margin: 0px 0px;}
+    
+                                                                /* Einde BLOG */
     
                                                                 /* Navigation bar*/
     nav {
